AP-20934: Cleanup SonarLint violations
AP-20934 (Port CXF changes to master (AP-20749))